--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tailwind CSS</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1>Hello World</h1>
+    <h1 class="text-5xl">Hello World</h1>
   </body>
 </html>
