--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1 class="text-5xl">Hello World</h1>
+    <h1 class="text-5xl font-bold text-blue-600">Hello World</h1>
+    <a
+      href="#"
+      class="bg-green-500 p-3 text-white inline-block m-3 rounded shadow hover:bg-green-700"
+      >Ini Tombol</a
+    >
+    <p class="m-3 bg-yellow-400">
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora,
+      reiciendis at? Blanditiis voluptatibus sit ut unde ratione cumque
+      asperiores minima. Doloribus aliquid at iure eum sit, molestias optio!
+      Dolore ea repudiandae labore iste tenetur sint, accusantium numquam.
+      Ducimus nisi vitae, assumenda cum mollitia voluptatum? Illo eos
+      reprehenderit at quaerat totam.
+    </p>
   </body>
 </html>
